--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://vercel-backend-dgf8.vercel.app/api/$1"
-    },
-    {
-      "source": "/uploads/(.*)",
-      "destination": "https://vercel-backend-dgf8.vercel.app/uploads/$1"
-    }
-  ]
+  "rewrites": []
 }
